--- a/AmDataVizDemo/Views/Home/ProductionData.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionData.cshtml
@@ -24,10 +24,26 @@
 <!-- End Breadcrumbbar -->
 <!-- Start Contentbar -->
 <div class="contentbar">
-
+    <!-- Extra Information
     <p>Refer to the <em>Dashboard</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
 
     <p>Provide a data table of production data here- see the production datatable at the bottom of the dashboard page.</p>
+        -->
+    <!-- Production Data table  -->
+    <div class="box">
+        <table id="ProductionDataTable" class="table table-striped dataTable no-footer dtr-inline">
+            <tr>
+                <th>Job ID</th>
+                <th>Job Name</th>
+                <th>Supplier Name</th>
+                <th>Material</th>
+                <th>Process</th>
+                <th>Kpi Name</th>
+                <th>Kpi Value</th>
+                <th>Report Date</th>
+            </tr>
+        </table>
+    </div>
 
 
 </div>
