--- a/AmDataVizDemo/Views/Home/TestData.cshtml
+++ b/AmDataVizDemo/Views/Home/TestData.cshtml
@@ -26,10 +26,23 @@
 <div class="contentbar">
 
     <p>Refer to the <em>Test Report</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
-
     <p>Provide a data table of test data here. Incorporate some of the aspects of Su-Ah's work on the Test Report page.</p>
-
     <p>Tidy this up- chart labels etc.</p>
+
+    <!-- test data table  -->
+    <!-- following: https://docs.google.com/spreadsheets/d/10FvflbF9h_82Ox24YiiHBCqPo8p1o7rh/edit#gid=622607341 -->
+    <div class="box">
+        <table id="TestDataTable" class="table table-striped dataTable no-footer dtr-inline">
+            <tr>
+                <th>Data Item</th>
+                <th>Units</th>
+                <th>Value</th>
+                <th>Load (Ibf)</th>
+                <th>Displacement</th>
+                <th>Strain (in/in)</th>
+            </tr>
+        </table>
+    </div>
 
 </div>
 <!-- End Contentbar -->
