--- a/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
@@ -42,23 +42,29 @@
 
     <!-- Tab content -->
     <div id="bar-chart-tabcontent" class="tabcontent hidden">
-        <h3>Bar Chart</h3>
-        <div class="container-fluid">
-            <div id="barchart" class="chart"></div>
+        <div class="box">
+            <h3>Bar Chart</h3>
+            <div class="container-fluid">
+                <div id="barchart" class="chart"></div>
+            </div>
         </div>
     </div>
 
     <div id="col-plot-tabcontent" class="tabcontent hidden">
-        <h3>Column Plot</h3>
-        <div class="container-fluid">
-            <div id="column" class="chart"></div>
+        <div class="box">
+            <h3>Column Plot</h3>
+            <div class="container-fluid">
+                <div id="column" class="chart"></div>
+            </div>
         </div>
     </div>
 
     <div id="line-chart-tabcontent" class="tabcontent hidden">
-        <h3>Line Chart</h3>
-        <div class="container-fluid">
-            <div id="linechart" class="chart"></div>
+        <div class="box">
+            <h3>Line Chart</h3>
+            <div class="container-fluid">
+                <div id="linechart" class="chart"></div>
+            </div>
         </div>
     </div>
 
