--- a/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
@@ -46,10 +46,13 @@
         <button class="tabforecast" id="forecast-arima" data-content="forecast-tabcontent">Forecast</button>
     </div>
 
-    <h3>Forecasted Chart</h3>
-    <div class="container-fluid">
-        <div id="forecastline"></div>
+    <div class="box">
+        <h3>Forecasted Chart</h3>
+        <div class="container-fluid">
+            <div id="forecastline"></div>
+        </div>
     </div>
+    
 </div>
 <!-- End Contentbar -->
 
