--- a/AmDataVizDemo/Views/Home/SupplierMap.cshtml
+++ b/AmDataVizDemo/Views/Home/SupplierMap.cshtml
@@ -53,7 +53,7 @@
 
         <!-- supplier table  -->
         <div class="box">
-            <table id="SupplierTable">
+            <table id="SupplierTable" class="table table-striped dataTable no-footer dtr-inline">
                 <tr>
                     <th>Company Name</th>
                     <th>City</th>
