--- a/AmDataVizDemo/wwwroot/css/style.css
+++ b/AmDataVizDemo/wwwroot/css/style.css
@@ -5,7 +5,8 @@
 .box {
     background: #fff;
     border-top: 3px solid #d2d6de;
-    margin-bottom: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
     width: 100%;
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
 }
