--- a/AmDataVizDemo/Views/Home/Machines.cshtml
+++ b/AmDataVizDemo/Views/Home/Machines.cshtml
@@ -27,7 +27,7 @@
 
     <p>Datatable of machines</p>
 
-    <div class="card">
+    <div class="box">
         <!-- buttons for export + search button: not mapped-->
         <div class="row">
             <div class="col-sm-12 col-md-6">
@@ -47,22 +47,23 @@
         </div>
         <!-- Machine table  -->
         <!-- following: senvol-machines.json -->
-
-        <table id="MachineDataTable" class="table table-striped dataTable no-footer dtr-inline">
-            <tr>
-                <th>Machine Model</th>
-                <th>Machine Manufacturer</th>
-                <th>AM Process ASTM</th>
-                <th>Ceramic</th>
-                <th>Composite</th>
-                <th>Metal</th>
-                <th>Polymer</th>
-                <th>Sand</th>
-                <th>Wax</th>
-                <th>General Material Type</th>
-                <th>Similar Material Type</th>
-            </tr>
-        </table>
+        <div class="table-responsive">
+            <table id="MachineDataTable" class="table table-striped dataTable no-footer dtr-inline">
+                <tr>
+                    <th>Machine Model</th>
+                    <th>Machine Manufacturer</th>
+                    <th>AM Process ASTM</th>
+                    <th>Ceramic</th>
+                    <th>Composite</th>
+                    <th>Metal</th>
+                    <th>Polymer</th>
+                    <th>Sand</th>
+                    <th>Wax</th>
+                    <th>General Material Type</th>
+                    <th>Similar Material Type</th>
+                </tr>
+            </table>
+        </div>
     </div>
 
 
