--- a/AmDataVizDemo/Views/Home/Materials.cshtml
+++ b/AmDataVizDemo/Views/Home/Materials.cshtml
@@ -49,22 +49,24 @@
         </div>
         <!-- Material table  -->
         <!-- following: senvol-materials.json -->
-        <table id="MaterialDataTable" class="table table-striped table-bordered dataTable no-footer dtr-inline">
-            <tr>
-                <th>Build Material Name</th>
-                <th>Material Manufacturer</th>
-                <th>Material AM Process</th>
-                <th>Ceramic </th>
-                <th>Metal</th>
-                <th>Polymer</th>
-                <th>Sand</th>
-                <th>Wax</th>
-                <th>Build Material Type</th>
-                <th>General Similar Material</th>
-                <th>Specific Similar Material</th>
-            </tr>
-        </table>
-    </div>
+        <div class="table-responsive">
+            <table id="MaterialDataTable" class="table table-striped table-bordered dataTable no-footer dtr-inline">
+                <tr>
+                    <th>Build Material Name</th>
+                    <th>Material Manufacturer</th>
+                    <th>Material AM Process</th>
+                    <th>Ceramic </th>
+                    <th>Metal</th>
+                    <th>Polymer</th>
+                    <th>Sand</th>
+                    <th>Wax</th>
+                    <th>Build Material Type</th>
+                    <th>General Similar Material</th>
+                    <th>Specific Similar Material</th>
+                </tr>
+            </table>
+        </div>
+        </div>
 
-</div>
+    </div>
 <!-- End Contentbar -->
