--- a/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
@@ -62,6 +62,10 @@
     <div id="line-chart-tabcontent" class="tabcontent hidden">
         <div class="box">
             <h3>Line Chart</h3>
+            <select id="CompSelect" name="CompList">
+                <option value="none" selected disabled hidden> Select a Test </option>
+            </select>
+
             <div class="container-fluid">
                 <div id="linechart" class="chart"></div>
             </div>
