--- a/AmDataVizDemo/Views/Home/TestData.cshtml
+++ b/AmDataVizDemo/Views/Home/TestData.cshtml
@@ -32,17 +32,19 @@
     <!-- test data table  -->
     <!-- following: https://docs.google.com/spreadsheets/d/10FvflbF9h_82Ox24YiiHBCqPo8p1o7rh/edit#gid=622607341 -->
     <div class="box">
-        <table id="TestDataTable" class="table table-striped dataTable no-footer dtr-inline">
-            <tr>
-                <th>Data Item</th>
-                <th>Units</th>
-                <th>Value</th>
-                <th>Load (Ibf)</th>
-                <th>Displacement</th>
-                <th>Strain (in/in)</th>
-            </tr>
-        </table>
-    </div>
+        <div class="table-responsive">
+            <table id="TestDataTable" class="table table-striped dataTable no-footer dtr-inline">
+                <tr>
+                    <th>Data Item</th>
+                    <th>Units</th>
+                    <th>Value</th>
+                    <th>Load (Ibf)</th>
+                    <th>Displacement</th>
+                    <th>Strain (in/in)</th>
+                </tr>
+            </table>
+        </div>
+        </div>
 
-</div>
+    </div>
 <!-- End Contentbar -->
