changed forecast lines to appear for any dropdown company

--- a/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
@@ -48,6 +48,9 @@
 
     <div class="box">
         <h3>Forecasted Chart</h3>
+        <select id="CompForeSelect" name="CompForeList">
+            <option value="none" selected disabled hidden> Select a Company </option>
+        </select>
         <div class="container-fluid">
             <div id="forecastline"></div>
         </div>
