--- a/AmDataVizDemo/Views/Shared/_Layout.cshtml
+++ b/AmDataVizDemo/Views/Shared/_Layout.cshtml
@@ -341,7 +341,7 @@
     <!--script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></!--script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" asp-append-version="true"></script-->
-    <script src="https://code.highcharts.com/highcharts.js" asp-append-version="true"></script>
+    <script src="https://code.highcharts.com/stock/highstock.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/highcharts-more.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/exporting.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/export-data.js" asp-append-version="true"></script>
